# bezier

./: .gitignore  CMakeLists.txt  LICENSE  README.md
data/: degree_result.csv  plot_result.py  result.csv  sample_result.csv
data/.ipynb_checkpoints/: plot-checkpoint.ipynb
folder/: LTBezier.h
include/: BF.h  HornBez.h  LTBezier.h  VS.h  barycentric.h  deCasteljau.h  highprecision.h  lader.h  linearGeometric.h  main.h  mpreal.h  vec2.h  wang.h
src/: BF.cpp  HornBez.cpp  VS.cpp  barycentric.cpp  deCasteljau.cpp  highPrecision.cpp  lader.cpp  linearGeometric.cpp  main.cpp  wang.cpp
